--- a/homepage.html
+++ b/homepage.html
@@ -83,6 +83,42 @@
         <div class="reveal">
             <div class="width">
                 <h2 class="guide">COMPETENCE TABLE</h2>
+                <table>
+                    <tr>
+                        <th>LEARNING OUTCOME</th>
+                        <th>DELIVERABLES</th>
+                    </tr>
+                    <tr>
+                        <td>Learning Outcome 1: User interaction (analysis & advice)</td>
+                        <td>
+                            <ul>
+                                <li>User Research Plan Enzo jjaajajajajaj lol </li>
+                                <li>User Research Plan Enzo jjaajajajajaj lol </li>
+                                <li>User Research Plan Enzo jjaajajajajaj lol </li>
+                                <li>User Research Plan Enzo jjaajajajajaj lol </li>
+
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Learning Outcome 2: User interaction (execution & validation) </td>
+                    </tr>
+                    <tr>
+                        <td>Learning Outcome 3: Software design and realisation</td>
+                    </tr>
+                    <tr>
+                        <td>Learning Outcome 4: Future-oriented organisation</td>
+                    </tr>
+                    <tr>
+                        <td>Learning Outcome 5: Investigative problem solving</td>
+                    </tr>
+                    <tr>
+                        <td>Learning Outcome 6: Personal leadership</td>
+                    </tr>
+                    <tr>
+                        <td>Learning Outcome 7: Goal-oriented interaction</td>
+                    </tr>
+                </table>
                 <hr>
             </div>
         </div>
