start of deliverables

--- a/homepage.html
+++ b/homepage.html
@@ -91,12 +91,11 @@
                     <tr>
                         <td>Learning Outcome 1: User interaction (analysis & advice)</td>
                         <td>
-                            <ul>
-                                <li>User Research Plan Enzo jjaajajajajaj lol </li>
-                                <li>User Research Plan Enzo jjaajajajajaj lol </li>
-                                <li>User Research Plan Enzo jjaajajajajaj lol </li>
-                                <li>User Research Plan Enzo jjaajajajajaj lol </li>
-
+                            <ul class="proof">
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: User Research Plan</a></li>
+                                <li>Personal Project: User Research Plan</li>
+                                <li>User Research Plan</li>
+                                <li>User Research Plan</li>
                             </ul>
                         </td>
                     </tr>
