--- a/homepage.html
+++ b/homepage.html
@@ -93,29 +93,57 @@
                         <td>
                             <ul class="proof">
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: User Research Plan</a></li>
-                                <li>Personal Project: User Research Plan</li>
-                                <li>User Research Plan</li>
-                                <li>User Research Plan</li>
                             </ul>
                         </td>
                     </tr>
                     <tr>
                         <td>Learning Outcome 2: User interaction (execution & validation) </td>
+                        <td>
+                            <ul class="proof">
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: User Research Plan</a></li>
+                            </ul>
+                        </td>
                     </tr>
                     <tr>
                         <td>Learning Outcome 3: Software design and realisation</td>
+                        <td>
+                            <ul class="proof">
+                                <li></li>
+                            </ul>
+                        </td>
                     </tr>
                     <tr>
                         <td>Learning Outcome 4: Future-oriented organisation</td>
+                        <td>
+                            <ul class="proof">
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: Project Plan</a></li>
+                            </ul>
+                        </td>
                     </tr>
                     <tr>
                         <td>Learning Outcome 5: Investigative problem solving</td>
+                        <td>
+                            <ul class="proof">
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: Front-End Framework Research</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: Reading Guide Document</a></li>
+                            </ul>
+                        </td>
                     </tr>
                     <tr>
                         <td>Learning Outcome 6: Personal leadership</td>
+                        <td>
+                            <ul class="proof">
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: Personal Evaluation and Reflection</a></li>
+                            </ul>
+                        </td>
                     </tr>
                     <tr>
                         <td>Learning Outcome 7: Goal-oriented interaction</td>
+                        <td>
+                            <ul class="proof">
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: Stakeholder Interactions</a></li>
+                            </ul>
+                        </td>
                     </tr>
                 </table>
                 <hr>
