content ready to be filled

--- a/homepage.html
+++ b/homepage.html
@@ -92,7 +92,7 @@
                         <td>Learning Outcome 1: User interaction (analysis & advice)</td>
                         <td>
                             <ul class="proof">
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: User Research Plan</a></li>
+                                <li><a class="menu-link line" href="individualdeliverable1.html" target="_blank" rel="noopener noreferrer">Individual Project: User Research Plan</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -100,7 +100,8 @@
                         <td>Learning Outcome 2: User interaction (execution & validation) </td>
                         <td>
                             <ul class="proof">
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: User Research Plan</a></li>
+                                <li><a class="menu-link line" href="individualdeliverable1.html" target="_blank" rel="noopener noreferrer">Individual Project: User Research Plan</a></li>
+                                <li><a class="menu-link line" href="individualdeliverable2.html" target="_blank" rel="noopener noreferrer">Individual Project: Wireframes and Mockups</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -116,7 +117,7 @@
                         <td>Learning Outcome 4: Future-oriented organisation</td>
                         <td>
                             <ul class="proof">
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: Project Plan</a></li>
+                                <li><a class="menu-link line" href="individualdeliverable3.html" target="_blank" rel="noopener noreferrer">Individual Project: Project Plan</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -124,7 +125,7 @@
                         <td>Learning Outcome 5: Investigative problem solving</td>
                         <td>
                             <ul class="proof">
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: Front-End Framework Research</a></li>
+                                <li><a class="menu-link line" href="individualdeliverable4.html" target="_blank" rel="noopener noreferrer">Individual Project: Front-End Framework Research</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: Reading Guide Document</a></li>
                             </ul>
                         </td>
@@ -133,7 +134,8 @@
                         <td>Learning Outcome 6: Personal leadership</td>
                         <td>
                             <ul class="proof">
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: Personal Evaluation and Reflection</a></li>
+                                <li><a class="menu-link line" href="individualdeliverable5.html" target="_blank" rel="noopener noreferrer">Individual Project: Personal Evaluation and Reflection</a></li>
+                                <li><a class="menu-link line" href="individualdeliverable6.html" target="_blank" rel="noopener noreferrer">Individual Project: Methods and Tooling</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -141,7 +143,7 @@
                         <td>Learning Outcome 7: Goal-oriented interaction</td>
                         <td>
                             <ul class="proof">
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: Stakeholder Interactions</a></li>
+                                <li><a class="menu-link line" href="individualdeliverable5.html" target="_blank" rel="noopener noreferrer">Individual Project: Personal Evaluation and Reflection</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -176,7 +178,7 @@
     </main>
 
     <footer class="footer">
-        <small class="copyright">&copy; Copyright 2022. All rights reserved</small>
+        <small class="copyright">&copy; Copyright 2023. All rights reserved</small>
         <a href="mailto:tijnvdheijden@europe.com" class="email">tijnvdheijden@europe.com</a>
       </footer>
     <script src="./js/main.js"></script>
