--- a/individualdeliverable1.html
+++ b/individualdeliverable1.html
@@ -91,7 +91,18 @@
         </div>
         <hr class="version">
     </div>
-</div>
+  </div>
+  <div class="reveal">
+    <div class="width">
+      <h2 class="guide">NEXT STEPS</h2>
+      <p class="desc">
+        After conducting my research plan with several users, I analyzed the gathered results, which helped me to iterate on my designs. These were mainly small design choice changes, but when I started developing I was still having update meetings with my semester coach Bardt. During these meetings, I showed my progress, and Bardt gave me advice on how to achieve the final goal I wanted.
+      </p>
+    </div>
+  </div>
+  <div class="company-btn">
+    <a onclick="window.open('https://drive.google.com/file/d/1QjnaEBBA_qTlO8SRhcUBT_4okBGEDblW/view?usp=sharing')" class="explore-btn">User Research Plan Document</a>
+  </div>
   </main>
   
 
