--- a/individualdeliverable2.html
+++ b/individualdeliverable2.html
@@ -28,74 +28,60 @@
   <div class="placeholder"></div>
   <main class="product-main">
     <section id="welcome" class="product-intro">
-      <h1 class="product-heading">USER RESEARCH PLAN</h1>
-      <p class="product-text">REPORT CONTAINING THE RESEARCH PLAN WHICH HAS BEEN CONDUCTED WITH USERS.</p>
+      <h1 class="product-heading">WIREFRAMES AND MOCKUPS</h1>
+      <p class="product-text">DOCUMENTING THE PROCESS OF ITERATIVELY WORKING ON THE DESIGN OF THE PORTFOLIO.</p>
     </section>
-<div class="reveal">
+  <div class="reveal">
+      <div class="width">
+          <h2 class="guide">INTRO</h2>
+          <p class="desc">
+              This deliverable page presents the documentation of the wireframing and designing process of the portfolio. After having answered several sub-questions, it was time to start structuring the portfolio. I started doing this by creating wireframes in a quick succession.
+          </p>
+        <hr class="version">
+      </div>
+  </div>
+  <div class="reveal">
     <div class="width">
-        <h2 class="guide">INTRO</h2>
-            <p class="desc">
-                This deliverable page presents a summary of the user research plan which has been conducted with users of the portfolio. The page gives a summary of the process which has been taken, from setting up goals to execution. It is suggested to read through this summary first for a better understanding, after which to use the button at the bottom of the page to refer to as the actual proof document.
-            </p>
-        <hr>
+      <div class="wireframe">
+        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1130" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FUJvSBrLB8Swfp0aRJS4jh0%2FPortfolio-Design%3Ftype%3Ddesign%26node-id%3D0%253A1%26mode%3Ddesign%26t%3DhBrazK1KSFYOijhg-1" allowfullscreen></iframe>      
+      </div>
+      <p class="desc">
+        These wireframes were very low fidelity, but after using peer feedback I could validate that the structure of the portfolio was clear. This meant that I could quickly start with the actual design of the portfolio.
+      </p>
+      <hr class="version">
     </div>
-</div>
-<div class="reveal">
+  </div>
+  <div class="reveal">
     <div class="width">
-        <h2 class="guide">PROCESS</h2>
-        <h3 class="subtitle">Approach</h3>
-        <p class="desc">
-          The duration of the project was three weeks. During these three weeks I have had weekly meetings with my semester coach, Bardt, who also happens to be the most prominent stakeholder. These meetings were mainly update meetings. However, some occasions also demanded to be used
-          for an expert interview, and as user research. Since Bardt is the main assessor, it is very useful to make us of this in order to get valuable feedback.
-        </p>
-        <div class="column">
-          <p class="company">
-            During my third-year internship. I started working with the SCRUM way of working. During this internship period I was working alone, and this way of working suited me very well. This is the reason why during this individual project I have also worked with SCRUM.
-          </p>
-          <p class="company">
-            I have worked in sprints of one week, which meant that there was a total of three sprints. After each weak, I had to have finished specific tasks from the backlog, and this is when I had update meetings with Bardt where we disccused my progress.
-          </p>
-        </div>
-        <p class="desc">
-          Initially, I had planned out each project phase to last one week. Of course, a project as this will always be an iterative process, which meant that at some moments, I was working on multiple phases simultaneously. An example for this is: after having a design ready, user research
-          was still necessary to either iterate or validate the design concept. This was also the main reason why the eventual development phase did not receive as much as attention as originally intended. This meant that the end result was satisfactory, but not to the extent as I had wished.
-        </p>
-        <h3 class="subtitle">Execution</h3>
-        <p class="desc">
-          I started this project by setting up the project plan. This project plan included the plan of approach, research questions, scope etc. The main research question for this project was as follows:
-          <ul class="target-list">
-            <li>How do I present myself as a professional media designer in a clear and structured portfolio?</li>
-          </ul>
-        </p>
-        <div class="column">
-          <p class="company">
-            Based on this main question, I had set up several sub questions, which can be found inside of the project plan. 
-          </p>
-        </div>
-        <p class="desc">
-          After receiving feedback from Bardt on my research questions, it was time to start the actual research phase. One of my sub questions was about using a front-end framework for the creation of my portfolio. I started by conducting secondary research, which mainly consisted out of desk research.
-          The results from this research were very broad, which did not allow me to draw a concrete answer to my research question. This meant that I had to do some form of primary research to gather some qualitative insights.
-        </p>
-        <p class="desc">
-          I had an expert interview with Bardt. Since Bardt is a front-end architect, he has enough experience to advise me in the use of a front-end framework, which also helped me to draw my final conclusion on the research question.
-        </p>
-        <p class="desc">
-          After having answered several sub questions, it was time to start on creating the structure of my portfolio. This consisted of creating wireframes in a quick succession. After this, I had a clear view of the structure I wanted to accomplish with the portfolio.
-          This meant that I could quickly receive peer feedback on the portfolio structure, and in no-time I was started on the design.
-        </p>
-        <div class="column">
-          <p class="company">
-            The designing phase took longer than expected, which is not particularly a bad thing, because I could get plenty of user insights with the help of the research plan I set up, especially dedicated for gathering thoughts on the user experience of my portfolio.
-          </p>
-          <p class="company">
-            After receiving valuable insights, I started developing. The remaining time to work on development was limited, which caused me to only have worked on the homepage of the portfolio. Of course, this is not the end of the world, since I had the whole semester to keep working on it.
-          </p>
-        </div>
-        <hr>
+      <p class="desc">
+        The start of the design phase was a bit rough. Making design choices such as colors, typefaces and spacing took longer than expected, which was not particularly a bad thing, but I wish I could have went through this in a more fluent succession. On the other hand, since it took longer for me to make certain choices, I dedicated more time to asking for feedback on certain aspects of the portfolio. This helped with creating a portfolio design I am sufficed with.
+      </p>
+      <p class="desc">
+        I also wanted my design to be in a sleek dark mode, since this is how I usually create my sites. Below you can see the design which has been created based on the earlier created wireframes.
+      </p>
+      <div class="wireframe">
+        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1130" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FUJvSBrLB8Swfp0aRJS4jh0%2FPortfolio-Design%3Ftype%3Ddesign%26node-id%3D13%253A2%26mode%3Ddesign%26t%3DhBrazK1KSFYOijhg-1" allowfullscreen></iframe>      </div>
+      <hr class="version">
     </div>
-</div>
+  </div>
+  <div class="reveal">
+    <div class="width">
+      <p class="desc">
+        After finishing my design, I turned my mockups into a functional prototype. This is the prototype I used to execute my USER RESEARCH PLAN. After having executed this user research plan, I noticed that the overall structure is clear, but the portfolio was still missing some features. I decided to create a diagram of the final structure. This structure still has the same idea, but with added features, such as the competence table, and other additional projects.
+      </p>
+      <div class="wireframe">
+        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1130" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FUJvSBrLB8Swfp0aRJS4jh0%2FPortfolio-Design%3Ftype%3Ddesign%26node-id%3D115%253A252%26mode%3Ddesign%26t%3DhBrazK1KSFYOijhg-1" allowfullscreen></iframe>    
+      </div>
+      <hr class="version">
+  </div>
+  <div class="reveal">
+    <div class="width">
+      <p class="desc">Adding these additional features, meant that these also needed to be worked out. Something I realized during update meetings with Bardt, is that the competence table really acts as the core of the portfolio, where the proof is gathered. This meant that I took some time to work out the design of the competence table, which can be seen down below. </p>
+      <div class="wireframe">
+        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1130" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FUJvSBrLB8Swfp0aRJS4jh0%2FPortfolio-Design%3Ftype%3Ddesign%26node-id%3D117%253A2%26mode%3Ddesign%26t%3DhBrazK1KSFYOijhg-1" allowfullscreen></iframe>      <hr class="version">
+    </div>
+  </div>
   </main>
-  
 
   <footer class="footer">
     <small class="copyright">&copy; Copyright 2023. All rights reserved</small>
