--- a/individualdeliverable4.html
+++ b/individualdeliverable4.html
@@ -29,17 +29,38 @@
   <main class="product-main">
     <section id="welcome" class="product-intro">
       <h1 class="product-heading">FRONT-END FRAMEWORK RESEARCH</h1>
-      <p class="product-text">REPORT CONTAINING THE RESEARCH PLAN WHICH HAS BEEN CONDUCTED WITH USERS.</p>
+      <p class="product-text">REPORT CONTAINING THE RESEARCH THAT HAS BEEN DONE REGARDING FRONT-END FRAMEWORKS.</p>
     </section>
-  <div class="reveal">
+    <div class="width">
+      <h2 class="guide">INTRO</h2>
+          <p class="desc">
+              This deliverable page presents a summary of the front-end framework research that has been done. The process of approach, and the main results and conclusions will be discussed. At the bottom of the page you can find a button which directs towards the full research document. It is suggested to read through the summary first, after which the research document can be used as the official proof.
+          </p>
+      <hr class="version">
+    </div>
+    <div class="reveal">
       <div class="width">
-          <h2 class="guide">INTRO</h2>
-              <p class="desc">
-                  This deliverable page presents a summary of the user research plan which has been conducted with users of the portfolio. The page gives a summary of the process which has been taken, from setting up goals to execution. It is suggested to read through this summary first for a better understanding, after which to use the button at the bottom of the page to refer to as the actual proof document.
-              </p>
-          <hr>
+        <h2 class="guide">CONTEXT</h2>
+        <div class="column">
+          <p class="company">
+            During my studies at Fontys ICT, I have programmed mainly in JavaScript, but I have never before worked with a front-end framework. This is the reason why I wanted to research whether the individual project is the right place to apply learning a front-end framework.
+          </p>
+          <p class="company">
+            While I was working on my third-year internship, I noticed that all of the company's web applications are built with the help of a front-end framework. Hence why I have gotten interest in learning a front-end framework. During, and after my internship I have not gotten the chance to start learning, but this semester seems like a right time.
+          </p>
+        </div>
       </div>
-  </div>
+      <hr class="version">
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">SECONDARY RESEARCH</h2>
+        <h3 class="subtitle">Research Question</h3>
+        <p class="desc">
+          How doe
+        </p>
+      </div>
+    </div>
   </main>
   
 
