final deliverables van individueel

--- a/individual.html
+++ b/individual.html
@@ -129,18 +129,9 @@
               Because the project basically contained all phases a project usually has, while only having a relatively short time span, it demanded me to make crucial decisions
               at moments when it was really needed. Here are some learning points I am taking with me in the future projects, and during my graduation:
               <ul class="target-list">
-                <li>Looking back, I spent a lot of time on designing my portfolio, which caused the scope of the end product to shift. I could have started user testing with a rough design, instead of trying to fix everything, and make everyhting as nice as possible before getting user input.
-                  For this project, it was not that big of a deal, because eventually I did not have to change a lot regarding to the design, but it is more about the principal.
+                <li>Making crucial decision when it is needed for the design and the research questions.
                 </li>
-                <li>
-                  This was also the case with the research questions. I noticed that in the final week, I was still referring back to the research questions during an update meeting with Bardt. I wish I would have finalized and decided on definitive research questions with Bardt in the first week
-                  of the project.
-                </li>
-                <li>For my research plan, I had a task-based usability test planned out as a final research method. I could have thought this through more, because after conducting my research plan, I noticed that the tasks a user is able to perform inside of my portfolio are relatively limited, which caused the user
-                  to have already done the tasks during the other research methods. This meant that the tasks I would give the user would be of no added value, since the user had already done it themselves.
-                </li>
-                <li>
-                  I have also learned to take time constraints into consideration. As previously mentioned, I had to make crucial decisisions at given moments. I feel like I did this quite well for the opportunities I took to research certain topics.
+                <li>Making sure that the methods that I choose for the user research plan are useful, and do not go to waste.
                 </li>
               </ul>
             </p>
