--- a/individualdeliverable4.html
+++ b/individualdeliverable4.html
@@ -56,9 +56,44 @@
       <div class="width">
         <h2 class="guide">SECONDARY RESEARCH</h2>
         <h3 class="subtitle">Research Question</h3>
+        <ul class="target-list">
+          <li>How does a front-end framework assist me with developing my portfolio?</li>
+        </ul>
         <p class="desc">
-          How doe
+          After having my research question, I set up specific terms which I used to conduct my secondary research, in order to answer my research question. Using mainly articles, YouTube video's and blogs, I noticed that I was not able to answer my research question,
+          since all of my sources concluded the same thing: it all comes down to personal preference. This was an answer I could not do anything with, which meant that I had to dive deeper into research.
         </p>
+      </div>
+      <hr class="version">
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">PRIMARY RESEARCH</h2>
+        <h3 class="subtitle">Expert interview</h3>
+        <p class="desc">
+          By making use of the expert interview from the DOT-framework, I would be able to get clarifaction on whether a front-end framework would assist me with creating my portfolio. Since my semestercoach Bardt is also a front-end architect, he has plenty of experience working with front-end frameworks.
+        </p>
+        <p class="desc">
+          I prepared several questions, and during the expert interview, it has clarified that the use of a front-end framework for this project would not be of any added value, because of the limited time that was left, and that I should work with the knowledge that I already have.
+        </p>
+        <hr class="version">
+      </div>
+      <div class="reveal">
+        <div class="width">
+          <h2 class="guide">CONCLUSION</h2>
+          <div class="column">
+            <p class="company">
+              Based on the results I gathered from this research, I can safely conclude that a framework will not be used for this portfolio project. Learning a framework has many advantages, for example for consistency in big projects.
+            </p>
+            <p class="company">
+              However, there is little added value for using a framework in my portfolio. This is mainly due to the time constraints and its learning curve. I will however be working with a front-end framework in my personal project.
+            </p>
+          </div>
+          <hr class="version">
+        </div>
+      </div>
+      <div class="company-btn">
+        <a onclick="window.open('https://drive.google.com/file/d/1FA3AT8jZPo3y8uaHIXO28-XZpNmlGurg/view?usp=sharing')" class="explore-btn">Front-end Framework Resarch Document</a>
       </div>
     </div>
   </main>
