--- a/individualdeliverable5.html
+++ b/individualdeliverable5.html
@@ -29,17 +29,36 @@
   <main class="product-main">
     <section id="welcome" class="product-intro">
       <h1 class="product-heading">PERSONAL REFLECTION AND EVALUATION</h1>
-      <p class="product-text">REPORT CONTAINING THE RESEARCH PLAN WHICH HAS BEEN CONDUCTED WITH USERS.</p>
+      <p class="product-text">PERSONAL REFLECTION AND EVALUATUON ON THE INDIVIDUAL PROJECT.</p>
     </section>
-  <div class="reveal">
+    <div class="width">
+        <h2 class="guide">JUDGEMENT & COMMUNICATION</h2>
+            <p class="desc">
+              With the help of communicating with my semestercoach (Bardt), and with fellow students during this semester, I have worked towards a solid start to my portfolio for this semester. I held weekly meetings with Bardt, where we discusses plenty of things related to the project. Eventually, I had solidly defined my research questions, and fortunately I have been able to answer all of them.
+            </p>
+            <p class="desc">
+              I mainly used the DOT-framework, and Nielsen Norman Group to answer my research questions. In previous semester I have used methods from these sources as well, which caused me to build up trust and reuse these sources.
+            </p>
+            <p class="desc">
+              I documented my work in a methodical order, using the research cycle. While working iteratively on my design, I was consistently conducting (user) research to keep generating new possibilities. 
+            </p>
+        <hr class="version">
+    </div>
+    <div class="reveal">
       <div class="width">
-          <h2 class="guide">INTRO</h2>
-              <p class="desc">
-                  This deliverable page presents a summary of the user research plan which has been conducted with users of the portfolio. The page gives a summary of the process which has been taken, from setting up goals to execution. It is suggested to read through this summary first for a better understanding, after which to use the button at the bottom of the page to refer to as the actual proof document.
-              </p>
-          <hr>
+        <h2 class="guide">LEARNING ABILITY</h2>
+        <p class="desc">
+          During this individual project, I have learned several things. These learning points mainly pointed towards making crucial decisions in a short time period. Because the project basically contained all phases a project usually has, while only having a relatively short time span, it demanded me to make crucial decisions at moments when it was really needed. Here are some learning points I am taking with me in the future projects, and during my graduation:
+        </p>
+        <ul class="target-list">
+          <li>Looking back, I spent a lot of time on designing my portfolio, which caused the scope of the end product to shift. I could have started user testing with a rough design, instead of trying to fix everything, and make everyhting as nice as possible before getting user input. For this project, it was not that big of a deal, because eventually I did not have to change a lot regarding to the design, but it is more about the principal.</li>
+          <li>This was also the case with the research questions. I noticed that in the final week, I was still referring back to the research questions during an update meeting with Bardt. I wish I would have finalized and decided on definitive research questions with Bardt in the first week of the project.</li>
+          <li>For my research plan, I had a task-based usability test planned out as a final research method. I could have thought this through more, because after conducting my research plan, I noticed that the tasks a user is able to perform inside of my portfolio are relatively limited, which caused the user to have already done the tasks during the other research methods. This meant that the tasks I would give the user would be of no added value, since the user had already done it themselves.</li>
+          <li>I have also learned to take time constraints into consideration. As previously mentioned, I had to make crucial decisisions at given moments. I feel like I did this quite well for the opportunities I took to research certain topics.</li>
+        </ul>
+        <hr class="version">
       </div>
-  </div>
+    </div>
   </main>
   
 
