--- a/individualdeliverable6.html
+++ b/individualdeliverable6.html
@@ -33,12 +33,39 @@
     </section>
   <div class="reveal">
       <div class="width">
-          <h2 class="guide">INTRO</h2>
-              <p class="desc">
-                  This deliverable page presents a summary of the user research plan which has been conducted with users of the portfolio. The page gives a summary of the process which has been taken, from setting up goals to execution. It is suggested to read through this summary first for a better understanding, after which to use the button at the bottom of the page to refer to as the actual proof document.
-              </p>
-          <hr>
+          <h2 class="guide">FIGMA</h2>
+          <p class="desc">
+            I used Figma for my entired designing process. This includes the wireframes, until the final prototype which has been tested with users. Using knowledge I gained on auto-layouts, styles and components during my internship, I was able to smoothly work through this process.
+          </p>
+          <div class="company">
+            <img class="deliverable" src="./images/figma.png">
+          </div>
+          <hr class="version">
       </div>
+  </div>
+  <div class="reveal">
+    <div class="width">
+        <h2 class="guide">NOTION</h2>
+        <p class="desc">
+          I used Notion for my entire project management. Notion is a very flexible tool which I started using during my studies at ICT. For individual projects like these it is an ideal program to use. This is also the place where I kept track of my backlog and SCRUM sprints.
+        </p>
+        <div class="company">
+          <img class="deliverable" src="./images/notion.png">
+        </div>
+        <hr class="version">
+    </div>
+  </div>
+  <div class="reveal">
+    <div class="width">
+        <h2 class="guide">GITHUB</h2>
+        <p class="desc">
+          I used Github for my version management. It is the tool that is constantly being used to keep up with the latest updates of my portfolio.
+        </p>
+        <div class="company">
+          <img class="deliverable" src="./images/git.png">
+        </div>
+        <hr class="version">
+    </div>
   </div>
   </main>
   
